[package]
name = "ldap_op"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
ldap3 = { version = "0.11.1", default-features = false, features = ["gssapi", "tls-rustls"] }
clap = { version = "4.3.0", features = ["derive"] }
windows = { version = "0.48.0", features = ["Win32_Networking_ActiveDirectory", "Win32_System_SystemInformation", "Win32_Foundation" ]}
toml = { version = "0.7.4" }
encoding_rs = "0.8.32"
regex = "1.8.3"